[tool.poetry]
name = "chestcancernet"
version = "0.1.0"
description = "Python package designed for building and training Convolutional Neural Networks (CNNs) to classify chest cancer images"
authors = ["Srinath V"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/srinath991/chestcancernet"
keywords = ["CNN", "Chest Cancer", "Deep Learning", "Image Classification"]

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.0.0"
pandas = "^1.0.0"
gdown = "*"
dvc = "*"
mlflow = "*"
notebook = "*"
numpy = "^1.18.0"
matplotlib = "*"
seaborn = "*"
python-box = "*"
pyyaml = "*"
tqdm = "*"
ensure = "*"
joblib = "*"
types-pyyaml = "*"
scipy = "*"
fastapi = "*"
uvicorn = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^22.3"
flake8 = "^3.9.2"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
